<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="avaitors.flysky.BookFlightActivity">

    <TextView
        android:id="@+id/bookingTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/make_a_booking"
        android:textSize="40sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/bookingFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bookingTitle">

        <AutoCompleteTextView
            android:id="@+id/source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/source"
            android:inputType="textAutoComplete|textCapWords"
            android:lines="1"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/bookingTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bookingFrom">

        <EditText
            android:id="@+id/destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:hint="@string/destination"
            android:inputType="textAutoComplete|textCapWords"
            android:lines="1"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/flightType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bookingTo"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/return_trip" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/one_way" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/flightDates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/flightType"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/flightJourneyDate"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/journey_date" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/flightReturnDate"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/return_date" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/PassengerTypes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/flightDates"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/adults" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/children" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/infants" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/PassengerTypesSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/PassengerTypes"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/adult_passengers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/child_passengers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/infant_passengers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Class_Promo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/PassengerTypesSelection"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/Class_selector"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/promo"
                android:lines="1"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/emer_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Find_Flight_Button"
        android:hint="@string/emergency_number"
        android:inputType="number" />

    <Button
        android:id="@+id/Find_Flight_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/find_flights" />
</RelativeLayout>
