<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context="avaitors.flysky.SignInPromptActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/app_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-70dp"
            android:layout_marginTop="-80dp"
            android:scaleType="centerInside"
            android:src="@drawable/flydubai"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/prompt_sign_in_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/action_sign_in_short" />

            <Button
                android:id="@+id/promp_register_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_up" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/offers"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    android:layout_column="1"
                    android:text="•"
                    android:textSize="20sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_column="2"
                    android:text="@string/get_rs_2000_worth_shopping_know_more"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_column="1"
                    android:text="•"
                    android:textSize="20sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_column="2"
                    android:text="@string/signup_for_free_and_avail_a_cash_of_rs_1000_in_your_pay_wallet"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_column="1"
                    android:text="•"
                    android:textSize="20sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_column="2"
                    android:text="@string/get_an_exclusive_cab_ride_at_your_door_step_free"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_column="1"
                    android:text="•"
                    android:textSize="20sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_column="2"
                    android:text="@string/you_can_use_your_promo_code_while_booking"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_column="1"
                    android:text="•"
                    android:textSize="20sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_column="2"
                    android:text="@string/you_are_in_a_safe_zone_t_amp_c_apply"
                    android:textSize="20sp" />
            </TableRow>
        </TableLayout>

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/or_continue_as_guest" />
    </LinearLayout>

</RelativeLayout>
